Module 1 User groups

--- a/site/guide/configuration/_add-groups.qmd
+++ b/site/guide/configuration/_add-groups.qmd
@@ -1,3 +1,5 @@
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 1. Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
 
 1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
@@ -8,4 +10,4 @@
 
 1. Click **{{< fa check >}} Create Group** to save.
 
-    Confirm that the new group is created and appears in the list of available groups, ensuring it is correctly configured for its intended use.
+    Confirm that the new group is created and appears in the list of available groups in alphabetical order.
