--- a/site/guide/configuration/manage-groups.qmd
+++ b/site/guide/configuration/manage-groups.qmd
@@ -5,7 +5,7 @@ aliases:
   - /guide/manage-groups.html
 ---
 
-Groups are segments of users with the ability to view models associated with that group. Access to granular features in the {{< var validmind.platform >}} within a group's set of models is further defined by roles and permissions.
+{{< include /guide/configuration/_user-groups.qmd >}}
 
 ::: {.callout}
 Users must belong to a default group of `All`, and can belong to mulitple groups.
@@ -34,9 +34,7 @@ Users must belong to a default group of `All`, and can belong to mulitple groups
 
 ## Add new groups
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
-
-{{< include _manage-groups-add.qmd >}}
+{{< include _add-groups.qmd >}}
 
 ## Remove groups
 :::{.callout}
