--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -250,34 +250,81 @@ Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation
 
 # Groups, roles, & permissions {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html#preview-the-validation-report-template" data-preload="yes"}
+## {.scrollable .center}
 
-:::: {.slideover--r .three-quarters}
-**Preview the validation report template**
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage user groups
 
-You can preview your model's validation report template right from the {{< var validmind.developer >}}:
+::: {.tc}
+[Learn more ...](/guide/configuration/manage-groups.qmd){.button target="_blank"}
+:::
 
-1. Continue with **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
-2.  Run all the cells in the sections under **Getting to know ValidMind**.
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
 
-When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/configuration/_user-groups.qmd >}}
+
+{{< include /guide/configuration/_add-groups.qmd >}}
+
+:::
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Verify the report template**
+**Add a user group**
 :::
 
-Once you've called `preview_template()`:
+Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
 
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. Note how the structure of the validation report reflects the previewed template.
+1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
+2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
+3. Select users from the list to add them to the group.
+4. Click **{{< fa check >}} Create Group** to save.
 
-When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage user roles
+
+::: {.tc}
+[Learn more ...](/guide/configuration/manage-roles.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/configuration/_user-groups.qmd >}}
+
+{{< include /guide/configuration/_add-groups.qmd >}}
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Add a user role**
+:::
+
+Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
+
+1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
+2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
+3. Select users from the list to add them to the group.
+4. Click **{{< fa check >}} Create Group** to save.
 
 ::::
 
