Module 1 Roles & permissions

--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -4,7 +4,7 @@ aliases:
   - /guide/manage-roles.html
 ---
 
-Roles are a named set of permissions that determine your users' access to features within the {{< var vm.platform >}} based on your organization's structure. Create and update roles, and verify that each role has appropriate access to the resources they need. 
+{{< include /guide/configuration/_user-roles.qmd >}}
 
 ::: {.attn}
 
@@ -21,9 +21,11 @@ Roles are a named set of permissions that determine your users' access to featur
 Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the highest level of access and as such, it cannot be cannot be modified.
 :::
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+{{< include _add-roles.qmd >}}
 
-{{< include _manage-roles.qmd >}}
+{{< include _manage-role-permissions.qmd >}}
+
+{{< include _manage-role-users.qmd >}}
 
 ### Rename existing roles
 
