--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -289,7 +289,7 @@ Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
 
 ::::
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -304,9 +304,19 @@ Manage user roles
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-{{< include /guide/configuration/_user-groups.qmd >}}
+{{< include /guide/configuration/_user-roles.qmd >}}
 
-{{< include /guide/configuration/_add-groups.qmd >}}
+::: {.panel-tabset}
+
+### 1. Add user roles
+
+{{< include /guide/configuration/_add-roles.qmd >}}
+
+### 2. Manage role permissions
+
+{{< include /guide/configuration/_manage-role-permissions.qmd >}}
+
+:::
 
 :::
 
@@ -316,15 +326,54 @@ Manage user roles
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a user role**
+**Create role & assign permissions**
 :::
 
-Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
+Under User Permissions, select **{{< fa user-group >}} Roles**.
 
-1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
-2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
-3. Select users from the list to add them to the group.
-4. Click **{{< fa check >}} Create Group** to save.
+1. Click **{{< fa plus >}} Add New Role**.
+2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
+3. Click **{{< fa plus >}} Add Role**.
+4. Select the role you created above.
+5. On the **Permissions** tab, select **Edit Permissions**.
+6. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission.
+7. Click **Save Permissions** to apply your changes.
+
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage global permissions
+
+::: {.tc}
+[Learn more ...](/guide/configuration/manage-permissions.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+In addition to assigning permissions via individual user roles, you can add roles to your global permissions:
+
+{{< include /guide/configuration/_manage-permissions.qmd >}}
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Modify global permissions**
+:::
+
+1. Under User Permissions, select **{{< fa screwdriver-wrench >}} Permissions**.
+2. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
+2. **Remove the role you created earlier** from a specific permission by clicking **{{< fa x >}}** next to the role.
 
 ::::
 
