--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -25,7 +25,28 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 
 {{< include _manage-role-permissions.qmd >}}
 
-{{< include _manage-role-users.qmd >}}
+#### Manage role users
+
+1. Click on the role whose users you want to manage.
+
+1. Select the **Users** tab, where you can:
+
+      - View a list of users assigned to that role.
+      - Add a role to users on that list.
+
+##### Add role to user
+
+   1. Click **{{< fa plus >}}** to open the Assign Roles menu for that user.
+
+   1. Click **{{< fa plus >}}** next to the role for each role to be assigned.
+
+   1. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+
+##### Delete role from user
+
+1. Click **{{< fa x >}}** to delete a role from a user.
+
+1. Once you confirm, that role will be removed from the user.
 
 ### Rename existing roles
 
