--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -20,17 +20,11 @@ Invite new users and review your current users from within the user directory. U
 
 ### Invite new users
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
-
-{{< include _manage-users-invite.qmd >}}
+{{< include _invite-users.qmd >}}
 
 ### Monitor user invitations
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
-
-1. Under User Permissions, click **{{< fa envelope >}} Invite New Users**.
-
-    {{< include _manage-users-monitor.qmd >}}
+{{< include _monitor-invitations.qmd >}}
 
 ## User roles
 
