--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -46,7 +46,7 @@ This first module is part of a four-part series:
 1. [The {{< var validmind.platform >}}](#the-validmind-platform)
 2. [Set up your organization](#set-up-your-organization)
 3. [Set up groups, roles, & permissions](#groups-roles-permissions)
-4. [Invite users to your organization](#invite-users)
+4. [Grant users access to your organization](#grant-users-access)
 
 :::
 
@@ -377,50 +377,124 @@ In addition to assigning permissions via individual user roles, you can add role
 
 ::::
 
-# Invite users {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Grant users access {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-**Document Overview**
+Invite users via email
 
 ::: {.tc}
-[Learn more...](/guide/model-validation/review-model-documentation.qmd){.button target="_blank"}
+[Learn more ...](/guide/configuration/manage-users.qmd){.button target="_blank"}
 :::
-<br>
 
-Try it **live** on the next page. {{< fa hand-point-right >}}
-
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-{{< include /guide/model-documentation/_model-documentation-overview.qmd >}}
+::: {.panel-tabset}
+Grant users access to the {{< var validmind.platform >}} by sending them email invitations to join your organization:
 
-{{< include /guide/model-documentation/_review-model-documentation.qmd >}}
+### Invite new users
+
+{{< include /guide/configuration/_invite-users.qmd >}}
+
+### Monitor invitations
+
+{{< include /guide/configuration/_monitor-invitations.qmd >}}
+:::
 
 :::
+
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--r .auto-collapse-10}
-**Explore sample model documentation**
+:::: {.slideover--r .three-quarters .auto-collapse-10}
+**Invite a new user**
 
-In a usual model lifecycle, a champion model will have been submitted to you for validation with completed model documentation.
+Invite a user to join your organization:
 
-Here, review the empty sample model documentation for the model you registered earlier to familiarize you with what the structure of documentation could look like when presented to you for review:
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+- **Group** — The group you created earlier.
+- **Role** — The role you created earlier.
 
 ::: {.embed}
-The structure of the model documentation reflects the documentation template applied to the model, just like the validation report template.
+**Hint:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
+
+Then, confirm that the invitation has disappeared from Pending Invites and that your new user has a join date under Invite History.
 
 :::
 
-When you're done taking a look around the model documentation, click [{{< fa chevron-right >}}]() to continue.
+When you are done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage role users
+
+::: {.tc}
+[Learn more ...](/guide/configuration/manage-roles.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+After granting access to your users, you can adjust their roles as needed:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+2. Under User Permissions, select **{{< fa user-group >}} Roles**.
+
+::: {.panel-tabset}
+
+### Manage role users
+
+1. Click on the role whose users you want to manage.
+
+1. Select the **Users** tab, where you can:
+
+      - View a list of users assigned to that role.
+      - Add a role to users on that list.
+
+### Add role to user
+
+   1. Click **{{< fa plus >}}** to open the Assign Roles menu for that user.
+
+   1. Click **{{< fa plus >}}** next to the role for each role to be assigned.
+
+   1. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+
+### Delete role from user
+
+1. Click **{{< fa x >}}** to delete a role from a user.
+
+1. Once you confirm, that role will be removed from the user.
+
+:::
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Modify a role's users**
+:::
+
+1. Under User Permissions, select **{{< fa user-group >}} Roles**.
+2. **Click on the role you created earlier** and select the **Users** tab.
+2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
+3. Click **{{< fa plus >}}** next to the role for each role to be assigned.
+4. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+5. Click **{{< fa x >}}** to delete a role from a user.
 
 ::::
 
@@ -430,24 +504,24 @@ When you're done taking a look around the model documentation, click [{{< fa che
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Using {{< var vm.product >}} for model validation
+Onboarding your organization
 
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
 In this first module, you learned how to:
 
-- [x] Install the {{< var validmind.developer >}} in your environment
-- [x] Connect to a model in the {{< var validmind.platform >}} as a validator
-- [x] Preview and verify your model's validation report template
-- [x] View your champion model's documentation
+- [x] Set up your organization's foundational units
+- [x] Manage user groups, user roles, & role permissions
+- [x] Invite users to the {{< var validmind.platform >}}
+- [x] Control the access users have to the {{< var validmind.platform >}}
 
 :::
 ::::
 
 ::: {.tc}
 <br>
-Continue your model development journey with:
+Continue your {{< var vm.platform >}} administration journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
 [Customizing Your Model Inventory](customizing-your-model-inventory.html){.button target="_blank"}
