--- a/site/guide/configuration/_invite-users.qmd
+++ b/site/guide/configuration/_invite-users.qmd
@@ -1,3 +1,5 @@
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 1. Under User Permissions, click **{{< fa envelope >}} Invite New Users**.
 
 1. In Invite by Email:
@@ -6,9 +8,9 @@
     - Assign the user to a group from the **[group]{.smallcaps}** dropdown menu.
     - Click **{{< fa plus >}}** under [role]{.smallcap} to open the Assign Roles menu for that user:
 
-        a. Click **{{< fa plus >}}** next to the role for each role to be assigned.  
+        a. Click **{{< fa plus >}}** next to the role for each role to be assigned.
         b. Click **Assign Roles to Invitee**.
 
 1. Click **{{< fa envelope >}} Send Invite**.
 
-Users will receive an email invitation that they must accept to join your organization.
+    Users will receive an email invitation that they must accept to join your organization.
