--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -40,7 +40,7 @@ listing:
     fields: [title, subtitle, description, reading-time]
 ---
 
-Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, manage users, roles, and permissions, and customize the {{< var vm.platform >}} for your institution's requirements.
+Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, customize the {{< var validmind.platform >}} for your institution's requirements, and use the {{< var vm.platform >}} as your centralized hub for risk management oversight.
 
 ::: {.column-margin}
 {{< include /training/_compatibility.qmd >}}
