--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -448,33 +448,17 @@ Manage role users
 
 After granting access to your users, you can adjust their roles as needed:
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-2. Under User Permissions, select **{{< fa user-group >}} Roles**.
+{{< include /guide/configuration/_manage-role-users.qmd >}}
 
 ::: {.panel-tabset}
 
-### Manage role users
-
-1. Click on the role whose users you want to manage.
-
-1. Select the **Users** tab, where you can:
-
-      - View a list of users assigned to that role.
-      - Add a role to users on that list.
-
 ### Add role to user
 
-   1. Click **{{< fa plus >}}** to open the Assign Roles menu for that user.
-
-   1. Click **{{< fa plus >}}** next to the role for each role to be assigned.
-
-   1. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+{{< include /guide/configuration/_add-role-to-user.qmd >}}
 
 ### Delete role from user
 
-1. Click **{{< fa x >}}** to delete a role from a user.
-
-1. Once you confirm, that role will be removed from the user.
+{{< include /guide/configuration/_delete-role-from-user.qmd >}}
 
 :::
 
