Module 2 save point

--- a/site/guide/configuration/manage-model-stakeholder-types.qmd
+++ b/site/guide/configuration/manage-model-stakeholder-types.qmd
@@ -3,12 +3,7 @@ title: "Manage model stakeholder types"
 date: last-modified
 ---
 
-Model stakeholders determine specific responsibilities and access levels for model review and approval processes for each model in your model inventory, such as read or edit access to model inventory fields.
-
-::: {.callout title="What permissions do model stakeholders have?"}
-Each model stakeholder also belongs to user groups which determine which models they can see, and have user roles with attached role permissions which define the level of access they have to overarching {{< var validmind.platform >}} features.
-
-:::
+{{< include /guide/configuration/_model-stakeholder-types.qmd >}}
 
 ::: {.attn}
 
@@ -18,7 +13,6 @@ Each model stakeholder also belongs to user groups which determine which models 
 - [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
 
 :::
-
 
 ## Add or edit model stakeholder types
 
