--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -137,9 +137,9 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 Once you've registered your model:
 
 1. **Select the name of your model you registered** to open up the model details page.
-2. Scroll through the page to explore the layout, and the default fields on your model.
+2. Scroll through the page to explore the default layout, and the fields available out-of-the-box.
 
-When you're done, click [{{< fa chevron-right >}}]() to continue.
+When you're done, click [{{< fa chevron-right >}}]() to learn how to customize your model inventory.
 
 ::::
 
@@ -149,10 +149,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Business units & use cases
+Manage model inventory fields
 
 ::: {.tc}
-[Learn more ...](/guide/configuration/set-up-your-organization.qmd){.button target="_blank"}
+[Learn more ...](/guide/model-inventory/manage-model-inventory-fields.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next pages. {{< fa hand-point-right >}}
@@ -160,13 +160,17 @@ Business units & use cases
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-Get your organization ready for use by first defining business units and use cases:
+{{< include /guide/model-inventory/_model-inventory-fields.qmd >}}
 
 ::: {.panel-tabset}
 
-{{< include /guide/configuration/_add-business-units.qmd >}}
+### Add or edit inventory fields
 
-{{< include /guide/configuration/_add-use-cases.qmd >}}
+{{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
+
+### Inventory field types
+
+{{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
 :::
 
@@ -178,39 +182,24 @@ Get your organization ready for use by first defining business units and use cas
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a business unit**
+**Add an inventory field**
 :::
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
-2. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
-3. Enter in your **[business unit name]{.smallcaps}**.
-4. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+1. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**.
+2. Click **{{< fa plus >}} Add New Field**.
+3. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
+4. Click **Save** to add your field.
 
 ::::
-
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Add a use case**
-:::
-
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
-2. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-3. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-4. Click **{{< fa plus >}} Add Use Case** to save your changes.
-
-::::
-
 
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Risk areas & validation guidelines
+Mange model stakeholder types
 
 ::: {.tc}
-[Learn more ...](/guide/model-validation/manage-validation-guidelines.html#set-up-validation-guidelines){.button target="_blank"}
+[Learn more ...](/guide/configuration/manage-model-stakeholder-types.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -218,15 +207,15 @@ Risk areas & validation guidelines
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-Next, define your risk areas and validation guidelines:
+{{< include /guide/configuration/_model-stakeholder-types.qmd >}}
 
 ::: {.panel-tabset}
 
-### 1. Add risk areas
+### 1. Add risk areas...
 
 {{< include /guide/model-validation/_add-risk-areas.qmd >}}
 
-### 2. Add validation guidelines
+### 2. Add validation guidelines...
 
 {{< include /guide/model-validation/_add-validation-guidelines.qmd >}}
 
