Module 2 - Configure inventory fields

--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -196,28 +196,37 @@ Manage model inventory fields
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Mange model stakeholder types
+Mange model stakeholder types!
 
 ::: {.tc}
 [Learn more ...](/guide/configuration/manage-model-stakeholder-types.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::: {.f5 .pr3 .pl3 .mt4 .embed}
+Please note that the stock **Model Developer**, **Model Owner**, and **Model Validator** stakeholder types are required by default for all models, and as such cannot be cannot be modified.
+:::
+
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
 {{< include /guide/configuration/_model-stakeholder-types.qmd >}}
 
+::: {.f4}
+
 ::: {.panel-tabset}
 
-### 1. Add risk areas...
+### 1. Add model stakeholder types
 
-{{< include /guide/model-validation/_add-risk-areas.qmd >}}
+{{< include /guide/configuration/_add-model-stakeholder-types.qmd >}}
 
-### 2. Add validation guidelines...
+### 2. Manage stakeholder type permissions
 
-{{< include /guide/model-validation/_add-validation-guidelines.qmd >}}
+{{< include /guide/configuration/_manage-stakeholder-type-permissions.qmd >}}
+
+:::
 
 :::
 
@@ -229,18 +238,17 @@ Mange model stakeholder types
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a risk area & validation guideline**
+**Add a model stakeholder type**
 :::
 
-Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
+Under User Permissions, select **{{< fa users >}} Model Stakeholder Types**:
 
-1. Click **{{< fa plus >}} Add Risk Area**.
-2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
-3. Click **Add Risk Area** to create your risk area.
-4. Hover over the risk area you added above until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
-5. Select **{{< fa plus >}} Add Guideline**.
-6. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
-7. Click **Add Guideline** to insert your guideline to your risk area.
+1. Click **{{< fa plus >}} Add New Stakeholder Type**.
+2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
+3. Click on the stakeholder type whose permissions you added above.
+4. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
+5. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission. 
+6. Click **Save Permissions** to apply your changes.
 
 ::::
 
