Module 2 - Customize documentation templates

--- a/site/guide/templates/_customize-documentation-templates.qmd
+++ b/site/guide/templates/_customize-documentation-templates.qmd
@@ -44,6 +44,8 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+Customize {{< var vm.product >}}'s templates for model documentation, validation reports, and ongoing monitoring reports to fit your specific case-by-case needs, such as type or complexity of model or model use case.
+
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
 1. Under Workplace Settings, select **{{< fa clone >}} Templates**.
@@ -84,7 +86,7 @@
 
 1. When you're done, click **Create New Version** to view a side-by-side comparison of your changes with the previous version:
    - Add a description in **[version notes]{.smallcaps}** to track your changes.
-   - Click **Save** to save the new version or **Cancel**.
+   - Click **Save** to save the new version.
 
 ::::
 
