--- a/site/guide/templates/working-with-documentation-templates.qmd
+++ b/site/guide/templates/working-with-documentation-templates.qmd
@@ -16,7 +16,7 @@ aliases:
   - /guide/model-documentation/working-with-documentation-templates.html
 ---
 
-Use {{< var vm.product >}}'s versioned documentation templates to ensure consistent and comprehensive model documentation, validation reports, and ongoing monitoring reports across all your models. 
+{{< include /guide/templates/_documentation-templates.qmd >}}
 
 :::{#documentation-templates}
 :::
