--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -254,14 +254,14 @@ Under User Permissions, select **{{< fa users >}} Model Stakeholder Types**:
 
 # Customize documentation templates {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Manage user groups
+Working with documentation templates
 
 ::: {.tc}
-[Learn more ...](/guide/configuration/manage-groups.qmd){.button target="_blank"}
+[Learn more ...](/guide/templates/working-with-documentation-templates.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -269,9 +269,23 @@ Manage user groups
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-{{< include /guide/configuration/_user-groups.qmd >}}
+{{< include /guide/templates/_documentation-templates.qmd >}}
 
-{{< include /guide/configuration/_add-groups.qmd >}}
+::: {.f4}
+
+::: {.panel-tabset}
+
+## View documentation templates
+
+{{< include /guide/templates/_view-documentation-templates.qmd >}}
+
+## Duplicate documentation templates
+
+{{< include /guide/templates/_duplicate-template.qmd >}}
+
+:::
+
+:::
 
 :::
 
@@ -281,15 +295,16 @@ Manage user groups
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Add a user group**
+**Duplicate a template**
 :::
 
-Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
+Under Workplace Settings, select **{{< fa clone >}} Templates**:
 
-1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
-2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
-3. Select users from the list to add them to the group.
-4. Click **{{< fa check >}} Create Group** to save.
+1. Select one of the tabs for the type of template you want to duplicate. For example: **Documentation**
+2. Select the template to duplicate. For example: **Binary classification**
+3. On the template details page, click **{{< fa copy >}} Duplicate Template**. 
+4. In the Duplicate Template YAML editor that opens, give your copy a **[template name]{.smallcaps}**.
+5. Click **Duplicate Template** to create a copy of your template.
 
 ::::
 
@@ -297,10 +312,10 @@ Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Manage user roles
+Customize documentation templates
 
 ::: {.tc}
-[Learn more ...](/guide/configuration/manage-roles.qmd){.button target="_blank"}
+[Learn more ...](/guide/templates/customize-documentation-templates.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -308,19 +323,7 @@ Manage user roles
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-{{< include /guide/configuration/_user-roles.qmd >}}
-
-::: {.panel-tabset}
-
-### 1. Add user roles
-
-{{< include /guide/configuration/_add-roles.qmd >}}
-
-### 2. Manage role permissions
-
-{{< include /guide/configuration/_manage-role-permissions.qmd >}}
-
-:::
+{{< include /guide/templates/_customize-documentation-templates.qmd >}}
 
 :::
 
@@ -330,54 +333,18 @@ Manage user roles
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Create role & assign permissions**
+**Customize a template**
 :::
 
-Under User Permissions, select **{{< fa user-group >}} Roles**.
+Under Workplace Settings, select **{{< fa clone >}} Templates**:
 
-1. Click **{{< fa plus >}} Add New Role**.
-2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
-3. Click **{{< fa plus >}} Add Role**.
-4. Select the role you created above.
-5. On the **Permissions** tab, select **Edit Permissions**.
-6. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission.
-7. Click **Save Permissions** to apply your changes.
-
-::::
-
-## {.scrollable .center}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Manage global permissions
-
-::: {.tc}
-[Learn more ...](/guide/configuration/manage-permissions.qmd){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f3}
-
-In addition to assigning permissions via individual user roles, you can add roles to your global permissions:
-
-{{< include /guide/configuration/_manage-permissions.qmd >}}
-
-:::
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Modify global permissions**
-:::
-
-1. Under User Permissions, select **{{< fa screwdriver-wrench >}} Permissions**.
-2. **Add the role you created earlier** to a specific permission by clicking **{{< fa plus >}}**, then selecting the permission from the drop-down menu.
-2. **Remove the role you created earlier** from a specific permission by clicking **{{< fa x >}}** next to the role.
+1. Select one of the tabs for the type of template you want to edit. For example: **Documentation**
+2. Select the template to edit. For example: **Copy of Binary classification**
+3. Click **{{< fa pencil >}} Edit Outline**.
+4. Make a modification to your template. For example: **Add a 1.4 Feature Engineering subsection**
+5. Click **Create New Version** to view a side-by-side comparison of your changes with the previous version.
+6. Add a description in **[version notes]{.smallcaps}** to track your changes.
+7. Click **Save** to save the new version.
 
 ::::
 
