--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -3,13 +3,7 @@ title: "Manage text block library"
 date: last-modified
 ---
 
-Build a library of reusable text blocks to insert into your model documentation, validation reports, and ongoing monitoring reports. Reusable text blocks can be private, visible only to the user, or shared, accessible across your organization.
-
-::: {.callout}
-## By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able to add, edit, or delete shared text blocks.
-
-Private blocks can be modified by any user role and are unique to that user.
-:::
+{{< include /guide/templates/_text-blocks.qmd >}}
 
 ::: {.attn}
 
@@ -21,24 +15,7 @@ Private blocks can be modified by any user role and are unique to that user.
 
 ## Add text blocks
 
-To create a new text block via the block library:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
-
-3. Click **Add New Block** and enter:
- 
-    - The **[name]{.smallcaps}** of your text block
-    - (Optional) A **[description]{.smallcaps}** for your text block
-    - The templated **[content]{.smallcaps}** for your text block
-
-4. Select a **[sharing]{.smallcaps}** option:
-
-    - **Private** — Visible only to you
-    - **Shared** — Accessible across your organization
-
-5. Click **Add Block** to save your text block.
+{{< include /guide/templates/_add-text-blocks.qmd >}}
 
 ### Add existing text blocks to library
 
@@ -63,22 +40,7 @@ After you've added a reusable text block, you can then insert it into your model
 
 ## Duplicate text blocks
 
-To make a copy of an existing text block in your block library:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
-
-3. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
-
-4. Make your desired changes to the following fields:
-
-    - The **[name]{.smallcaps}** of your text block
-    - (Optional) A **[description]{.smallcaps}** for your text block
-    - The templated **[content]{.smallcaps}** for your text block
-    - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
-
-5. Click **Duplicate Block** to save the copy of your text block.
+{{< include /guide/templates/_duplicate-text-blocks.qmd >}}
 
 ## Edit text blocks
 
