--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -350,86 +350,40 @@ Under Workplace Settings, select **{{< fa clone >}} Templates**:
 
 # Configure reusable blocks {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Invite users via email
+Manage text block library
 
 ::: {.tc}
-[Learn more ...](/guide/configuration/manage-users.qmd){.button target="_blank"}
+[Learn more ...](/guide/templates/manage-text-block-library.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::: {.f5 .pr3 .pl3 .mt4 .embed}
+**By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role is able to add, edit, or delete shared text blocks.**
+
+Private blocks can be modified by any user role and are unique to that user.
+
+:::
+
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-::: {.panel-tabset}
-Grant users access to the {{< var validmind.platform >}} by sending them email invitations to join your organization:
-
-### Invite new users
-
-{{< include /guide/configuration/_invite-users.qmd >}}
-
-### Monitor invitations
-
-{{< include /guide/configuration/_monitor-invitations.qmd >}}
-:::
-
-:::
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--r .three-quarters .auto-collapse-10}
-**Invite a new user**
-
-Invite a user to join your organization:
-
-- **Group** — The group you created earlier.
-- **Role** — The role you created earlier.
-
-::: {.embed}
-**Hint:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
-
-Then, confirm that the invitation has disappeared from Pending Invites and that your new user has a join date under Invite History.
-
-:::
-
-When you are done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-## {.scrollable .center}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Manage role users
-
-::: {.tc}
-[Learn more ...](/guide/configuration/manage-roles.qmd){.button target="_blank"}
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-:::
-
-::: {.column width="70%" .bl .pl4 .f3}
-
-After granting access to your users, you can adjust their roles as needed:
-
-{{< include /guide/configuration/_manage-role-users.qmd >}}
+{{< include /guide/templates/_text-blocks.qmd >}}
 
 ::: {.panel-tabset}
 
-### Add role to user
+### Add text blocks
 
-{{< include /guide/configuration/_add-role-to-user.qmd >}}
+{{< include /guide/templates/_add-text-blocks.qmd >}}
 
-### Delete role from user
+### Duplicate text blocks
 
-{{< include /guide/configuration/_delete-role-from-user.qmd >}}
+{{< include /guide/templates/_duplicate-text-blocks.qmd >}}
 
 :::
 
@@ -441,15 +395,27 @@ After granting access to your users, you can adjust their roles as needed:
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Modify a role's users**
+**Add a shared text block**
 :::
 
-1. Under User Permissions, select **{{< fa user-group >}} Roles**.
-2. **Click on the role you created earlier** and select the **Users** tab.
-2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
-3. Click **{{< fa plus >}}** next to the role for each role to be assigned.
-4. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
-5. Click **{{< fa x >}}** to delete a role from a user.
+1. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+2. Click **Add New Block** and enter in the details for your text block.
+3. Select the following **[sharing]{.smallcaps}** option: **Shared**
+4. Click **Add Block** to save your text block.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Duplicate a text block for private use**
+:::
+
+1. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+2. To the right of the text block you created earlier, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
+3. Make your changes to the details of the block, and select the following **[sharing]{.smallcaps}** option: **Private**
+4. Click **Duplicate Block** to save a private copy of the text block.
 
 ::::
 
@@ -459,17 +425,17 @@ After granting access to your users, you can adjust their roles as needed:
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Onboarding your organization
+Customizing your model inventory
 
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-In this first module, you learned how to:
+In this second module, you learned how to:
 
-- [x] Set up your organization's foundational units
-- [x] Manage user groups, user roles, & role permissions
-- [x] Invite users to the {{< var validmind.platform >}}
-- [x] Control the access users have to the {{< var validmind.platform >}}
+- [x] Configure your model inventory's fields
+- [x] Define granular access to model inventory fields
+- [x] Customize and duplicate documentation templates
+- [x] Configure reusable blocks for use in templates
 
 :::
 ::::
@@ -479,5 +445,5 @@ In this first module, you learned how to:
 Continue your {{< var vm.platform >}} administration journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Customizing Your Model Inventory](customizing-your-model-inventory.html){.button target="_blank"}
+[{{< var vm.product >}} for Model Risk Management](validmind-for-model-risk-management.html){.button target="_blank"}
 :::
