Module 3 set up

--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -139,7 +139,7 @@ Once you've registered your model:
 1. **Select the name of your model you registered** to open up the model details page.
 2. Scroll through the page to explore the default layout, and the fields available out-of-the-box.
 
-When you're done, click [{{< fa chevron-right >}}]() to learn how to customize your model inventory.
+When you're done, click [{{< fa chevron-right >}}]() to learn how to **customize your model inventory.**
 
 ::::
 
@@ -339,7 +339,7 @@ Customize documentation templates
 Under Workplace Settings, select **{{< fa clone >}} Templates**:
 
 1. Select one of the tabs for the type of template you want to edit. For example: **Documentation**
-2. Select the template to edit. For example: **Copy of Binary classification**
+2. Select the template to edit. For example, the duplicate you created earlier: **Copy of Binary classification**
 3. Click **{{< fa pencil >}} Edit Outline**.
 4. Make a modification to your template. For example: **Add a 1.4 Feature Engineering subsection**
 5. Click **Create New Version** to view a side-by-side comparison of your changes with the previous version.
