--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -236,7 +236,7 @@ Next, define your risk areas and validation guidelines:
 **Add a risk area & validation guideline**
 :::
 
-Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
+Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**:
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
@@ -280,7 +280,7 @@ Manage user groups
 **Add a user group**
 :::
 
-Under User Permissions in the sidebar, select **{{< fa users >}} Groups**.
+Under User Permissions in the sidebar, select **{{< fa users >}} Groups**:
 
 1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
 2. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
@@ -329,7 +329,7 @@ Manage user roles
 **Create role & assign permissions**
 :::
 
-Under User Permissions, select **{{< fa user-group >}} Roles**.
+Under User Permissions, select **{{< fa user-group >}} Roles**:
 
 1. Click **{{< fa plus >}} Add New Role**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
@@ -421,7 +421,7 @@ Invite a user to join your organization:
 - **Role** — The role you created earlier.
 
 ::: {.embed}
-**Hint:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
+**Tip:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
 
 Then, confirm that the invitation has disappeared from Pending Invites and that your new user has a join date under Invite History.
 
@@ -473,8 +473,9 @@ After granting access to your users, you can adjust their roles as needed:
 **Modify a role's users**
 :::
 
-1. Under User Permissions, select **{{< fa user-group >}} Roles**.
-2. **Click on the role you created earlier** and select the **Users** tab.
+Under User Permissions, select **{{< fa user-group >}} Roles**:
+
+1. **Click on the role you created earlier** and select the **Users** tab.
 2. **For the user you invited earlier,** click **{{< fa plus >}}** to open the Assign Roles menu.
 3. Click **{{< fa plus >}}** next to the role for each role to be assigned.
 4. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
